--- a/demo_notebook.ipynb
+++ b/demo_notebook.ipynb
@@ -99,7 +99,7 @@
     "* Whether SNooPy fitting succeeded\n",
     "* Whether there is data near peak (see `Nbefore` and `Nafter` hyperparameters)\n",
     "\n",
-    "On running `.trim_sample()`, `BIRDSNACK` loops through the SNe, estimating Tmax for each SN using a 1DGP, trims the data to the phase range `phasemax`->`phasemin`, then counts the data points around peak.\n",
+    "On running `.trim_sample()`, `BIRDSNACK` loops through the SNe, estimating Tmax for each SN using a 1DGP, trims the data to the phase range `phasemin`->`phasemax`, then counts the data points around peak.\n",
     "\n",
     "We have already loaded our fiducial sample, so no additional SNe will be dropped in this demo."
    ]
@@ -185,7 +185,7 @@
     "The `additional_cuts()` method uses the `additional_cut_parameters` in the `.yaml` choices file.\n",
     "\n",
     "For example, the sample can be cut on:\n",
-    "* Host galaxy stellar mass, to include all mass (`mass_mode:all_masses`) or for example only high mass (`mass_mode:high_masses`) using a cut `logMcut:10`.\n",
+    "* Host galaxy stellar mass, to include all masses (`mass_mode:all_masses`) or for example only high mass (`mass_mode:high_masses`) using a cut `logMcut:10`.\n",
     "* Cut using the $|B-V|<0.3$ mag cut; `BVcut:False` or `True`\n",
     "* Cut so each SN has magnitude measurement errors less than `magerrcut:0.3` mag\n",
     "* Cut so only spectroscopically normal SNe Ia are retained: `spectype:normal`\n",
